# zcash-address-lib

./: Cargo.toml  README.md  build.rs  uniffi.toml
src/: lib.rs  zcash_address.udl  zcash_address_util.swift  zcash_address_utilFFI.h  zcash_address_utilFFI.modulemap
tests/: test_generated_bindings.rs
tests/bindings/: test_zcash_address_helper.swift
