[package]
name = "zcash-address-lib"
version = "0.1.0"
edition = "2018"

authors = ["Pacu <francisco.gmail@gmail.com"]
license = "MIT"
publish = false

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "uniffi_zcash_addresses"

[dependencies]
uniffi_macros = "0.13"
uniffi = {version = "0.13", features=["builtin-bindgen"]}
thiserror = "1.0"
zcash_address = "0.0"

[build-dependencies]
uniffi_build = {version = "0.13", features=["builtin-bindgen"]}
